feat: :sparkles: add scope frontend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "conventionalCommits.scopes": [
-        "backend"
+        "backend",
+        "frontend"
     ],
     "[python]": {
     "editor.defaultFormatter": "ms-python.black-formatter",
